# libccl

./: .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Pipfile  README.md  TODO  conanfile.py  conanfile.txt  default.profraw  vcpkg.json  version.cmake
.github/workflows/: build-and-test-release.yml
cmake/: build-c4core.cmake  build-xxhash.cmake  definitions.cmake  docker-entrypoint.sh  features.cmake  test.cmake
include/ccl/: allocator.hpp  api.hpp  atomic.hpp  bitset.hpp  ccl.hpp  compat.hpp  composite-allocator.hpp  compressed-pair.hpp  concepts.hpp  contiguous-iterator.hpp  debug.hpp  definitions.hpp  definitions.hpp.in  dense-map.hpp  dependent-pool.hpp  deque.hpp  either.hpp  exceptions.hpp  features.hpp  features.hpp.in  handle-manager.hpp  handle.hpp  hash.hpp  hashtable.hpp  local-allocator.hpp  macros.hpp  maybe.hpp  memory-pool.hpp  packed-integer.hpp  paged-vector.hpp  pair.hpp  pool.hpp  ring.hpp  set.hpp  sparse-set.hpp  table.hpp  tagged-pointer.hpp  test.hpp  type-traits.hpp  unordered-paged-vector.hpp  (+4 more)
include/ccl/algorithm/: search.hpp
include/ccl/concurrent/: channel.hpp  fifo.hpp
include/ccl/ecs/: archetype.hpp  component.hpp  component2.hpp  entity.hpp  object.hpp  registry-editor.hpp  registry.hpp  view.hpp
include/ccl/handle/: handle.hpp  raw-handle.hpp  typed-handle.hpp  versioned-handle.hpp
include/ccl/i18n/: language.hpp
include/ccl/internal/: optional-allocator.hpp
include/ccl/memory/: allocator.hpp  composite-allocator.hpp  default-allocator-impl.hpp  local-allocator.hpp  memory.hpp
include/ccl/pointer/: _unique.hpp  base.hpp  pointer.hpp  shared.hpp  unique.hpp  weak.hpp
include/ccl/string/: ansi-builder.hpp  ansi-string.hpp  basic-string.hpp  basic_string.hpp  builder.hpp  char-traits.hpp  char_traits.hpp  nul-terminated.hpp  sstream.hpp
include/ccl/tables/: table.hpp  tables.hpp  view.hpp
include/ccl/test/: counting-test-allocator.hpp  test.hpp
include/charcoal/: allocator.hpp  api.hpp  concepts.hpp  debug.hpp  exceptions.hpp  features.hpp.in  test.hpp  util.hpp  vector.hpp
src/: allocator.cpp
test/: atomic-flag.cpp  atomic.cpp  bitset.cpp  compat.cpp  composite-allocator.cpp  compressed-pair.cpp  contiguous-iterator.cpp  dense-map.cpp  dependent-pool.cpp  deque-begin-policy.cpp  deque-center-policy.cpp  deque.cpp  handle-manager.cpp  handle.cpp  hash.cpp  hashtable-iterator.cpp  hashtable.cpp  local-allocator.cpp  maybe.cpp  memory-pool.cpp  packed-integer.cpp  paged-vector.cpp  pair.cpp  pool.cpp  ring.cpp  set-iterator.cpp  set.cpp  sparse-set.cpp  table.cpp  tagged-pointer.cpp  test.cpp  type-traits.cpp  unordered-paged-vector.cpp  util.cpp  vector.cpp
test/algorithm/: search.cpp
test/concurrent/: channel.cpp
test/ecs/: archetype.cpp  component.cpp  component2.cpp  object.cpp  registry.cpp  view.cpp
test/handle/: typed-handle.cpp  versioned-handle.cpp
test/i18n/: language.cpp
test/internal/: optional-allocator.cpp
test/memory/: composite-allocator.cpp  default-allocator.cpp  local-allocator.cpp  null-allocator.cpp
test/pointer/: shared.cpp  weak.cpp
test/string/: basic-string.cpp  basic_string.cpp  builder.cpp  nul-terminated-string.cpp  nul-terminated.cpp
test/tables/: table.cpp  view.cpp
test/test/: test.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
